--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "autoload": {
         "psr-0": {
-            "DVelopment\\FastBill": "lib/DVelopments",
+            "DVelopment\\FastBill": "lib/DVelopment",
             "DVelopment\\Tests\\": ""
         }
     },
